# android_trace

./: AUTHORS  CHANGELOG.md  Cargo.toml  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
android_trace/: Cargo.toml  README.md
android_trace/src/: ffi.rs  lib.rs
tracing_android_trace/: Cargo.toml  README.md
tracing_android_trace/src/: async_layer.rs  lib.rs  sync_layer.rs
