[workspace]
members = ["android_trace", "tracing_android_trace"]
resolver = "2"

[workspace.package]
license = "Apache-2.0 OR MIT"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml and with the relevant README.md files.
# We use C string literals
rust-version = "1.77"

repository = "https://github.com/linebender/android_trace"
edition = "2021"

[workspace.dependencies]
android_trace = { path = "./android_trace", version = "0.1.0", default-features = false }

[workspace.lints]
rust.unreachable_pub = "warn"
rust.unsafe_op_in_unsafe_fn = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"

clippy.doc_markdown = "warn"
clippy.semicolon_if_nothing_returned = "warn"
