[package]
name = "android_trace"
description = "Support for Android NDK Tracing"
categories = ["api-bindings", "os"]
keywords = ["android", "logging", "atrace", "ndk"]
readme = true
# When updating, also update the version in the dependency in the workspace Cargo.toml
version = "0.1.0"

license.workspace = true
rust-version.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libc = "0.2.153"

[features]
default = ["api_level_23"]
api_level_23 = []
api_level_29 = ["api_level_23"]

[dev-dependencies]
static_assertions = "1.1.0"

[package.metadata.docs.rs]
default-target = "aarch64-linux-android"
# In theory, we could add the other Android targets here. 
# However, the API is identical across any of them, so there's no advantage
targets = []
