[package]
name = "tracing_android_trace"
description = "Support for Android NDK Tracing"
categories = [
    "development-tools::debugging",
    "os",
    "development-tools::profiling",
]
keywords = ["android", "logging", "tracing"]
readme = true

version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
# In theory, we could add the other Android targets here.
# However, the API is identical across all of them, so there's no advantage.
default-target = "aarch64-linux-android"
targets = []

[lints]
workspace = true

[dependencies]
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "std",
    "fmt",
] }
tracing = "0.1.40"
thread_local = "1.1.8"

[features]
default = ["api_level_23"]

# Assume that Android API level 23 is available, to avoid some runtime symbol lookups
api_level_23 = ["android_trace/api_level_23"]
# Assume that Android API level 29 is available, to avoid runtime symbol lookups entirely
api_level_29 = ["android_trace/api_level_29"]

[target.'cfg(target_os = "android")'.dependencies]
# We only depend on android_trace on Android so that we can customise the
# `compile_error` message
android_trace = { workspace = true, default-features = false }
